<?xml version="1.0" encoding="utf-8"?>
<!--

    This software includes work modified from "RN4020 Die" Copyright (C) 2014 Microchip Technology Inc.
 
    This software includes work modified from "The Android Open Source Project" copyright (C) 2013.
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
 
         http://www.apache.org/licenses/LICENSE-2.0
 
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->

<resources>
    <string name="app_name">CIAA RN4020 Demo</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="mldp_not_supported">MLDP is not supported</string>
    <string name="label_address">Address: </string>
    <string name="label_state">State: </string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="question_mark">\?</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <!-- CIAA items -->
    <string name="ciaa_led0r">LED0R</string>
    <string name="ciaa_led0g">LED0G</string>
    <string name="ciaa_led0b">LED0B</string>
    <string name="ciaa_led1">LED1</string>
    <string name="ciaa_led2">LED2</string>
    <string name="ciaa_led3">LED3</string>

</resources>
